[tool.poetry]
name = "django-dsfr-combobox"
version = "0.1.0"
description = "An implementation of a ARIA-compatible combobox using the DSFR design system"
authors = ["Sylvain Boissel <sylvain@boissel.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_dsfr_combobox"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2"
django-dsfr = "^0.11.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
